# electo

./: google.json  pyproject.toml
apps/: urls.py
apps/products/: admin.py  models.py  urls.py  views.py
apps/products/management/commands/: fake_product.py
apps/users/: forms.py  models.py  tasks.py  urls.py  utils.py  views.py
root/: settings.py  urls.py
templates/electro/: activate_user.html  base.html  checkout.html  email_template.html  index.html  login.html  logout.html  product.html  register.html  store.html
